# openklerk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-state-request.md
.github/workflows/: ci.yml  quality-gate.yml
docs/: architecture.md  contributing-guide.md  filer-reference.md  openklerk-config.md  quickstart.md
examples/: business_entity.json  filer_config.json
openclerc/: __init__.py  cli.py
openclerc/contrib/: __init__.py  leaderboard.py  quality_gate.py  scaffold.py  screenshot_analyzer.py
openclerc/core/: __init__.py  base_filer.py  browser.py  exceptions.py  orchestrator.py  state_machine.py  utils.py
openclerc/demo/: __init__.py  overlay.py  recorder.py  viral_post.py
openclerc/filers/: __init__.py  california_soi.py  delaware_franchise_tax.py  dummy_filer.py  sf_business_reg.py
openclerc/filers/_template/: __init__.py  filer.py
openclerc/intelligence/: __init__.py  analyzer.py  models.py  prompts.py  service.py
openclerc/intelligence/backends/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
openclerc/models/: __init__.py  business.py  states.py
openklerk/: __init__.py  cli.py
openklerk/contrib/: __init__.py  leaderboard.py  quality_gate.py  scaffold.py  screenshot_analyzer.py
openklerk/core/: __init__.py  browser.py  exceptions.py  orchestrator.py  settings.py  state_machine.py  utils.py
openklerk/demo/: __init__.py  overlay.py  recorder.py  viral_post.py
openklerk/filers/: __init__.py  california_soi.py  delaware_franchise_tax.py  dummy_filer.py  sf_business_reg.py
openklerk/filers/_template/: config.json  filer.py
openklerk/intelligence/: __init__.py  analyzer.py  prompts.py  service.py
openklerk/intelligence/backends/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
openklerk/models/: __init__.py  filing.py
tests/: conftest.py  test_california_soi.py  test_delaware_franchise_tax.py  test_scaffold.py  test_sf_business_reg.py
