[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openklerk"
version = "0.1.0"
description = "Open-source engine for autonomous government compliance filing"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [{name = "Balaji Renukumar", email = "balaji.renukumar@sensfix.com"}]

dependencies = [
    "playwright>=1.41.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "google-cloud-aiplatform>=1.40.0",
    "httpx>=0.26.0",
    "Pillow>=10.0.0",
    "thefuzz>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
openklerk = "openklerk.cli:cli"

[project.urls]
Homepage = "https://github.com/NeverMissAFiling/openklerk"
Documentation = "https://github.com/NeverMissAFiling/openklerk/tree/main/docs"
Issues = "https://github.com/NeverMissAFiling/openklerk/issues"

[tool.setuptools.packages.find]
include = ["openklerk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
